# JXR2UltraHDR-lib

./: .gitignore  .gitmodules  CMakeLists.txt
patches/: fix_color_gamut_srgb.patch  fix_crt_md_for_winui.patch  fix_jpeg_segment_order.patch  fix_turbojpeg_crt_dll.patch
src/api/: ConverterAPI.cpp  ConverterAPI.h
src/common/: Error.h  ImageBuffer.h
src/pipeline/: ColorTransform.cpp  ColorTransform.h  Converter.cpp  Converter.h  JXRDecoder.cpp  JXRDecoder.h  UltraHDREncoder.cpp  UltraHDREncoder.h
